fix sections-style .container gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ body {
   flex-direction: column;
   justify-content: center;
   padding: 120px 0px;
-  gap: 72px;
+  gap: 48px;
 }
 
 .logo {
